# backend-challenge-fastapi

./: README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  deps.py
app/api/endpoints/: healthcheck.py  login.py  user.py
app/core/: config.py  security.py
app/crud/: base.py
app/db/: base.py  init_db.py  session.py
app/models/: user.py
app/schemas/: __init__.py  healthcheck.py  user.py
app/tests/: conftest.py
app/tests/api/endpoints/: test_healthcheck.py  test_login.py  test_user.py
app/tests/crud/: test_user.py
