[tool.poetry]
name = "Resilience FastAPI Challenge"
version = "0.1.0"
description = "Sample subscription app for Resilience backend engineer applicants"
authors = ["Russ Snyder <russ@arceo.ai>"]

[tool.poetry.dependencies]
python = "^3.7"

bcrypt = "^3.2.0"
fastapi = "^0.65.1"
passlib = "^1.7.4"
pydantic = { version = "^1.8.2", extras = ["email"] }
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.17"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "21.5b2"
Faker = "^8.5.1"
isort = "^5.8.0"
pytest = "^6.2.4"
requests = "^2.25.1"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
